Got jasmine and lodash loading from Bower and working properly.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,15 +9,15 @@
     <meta charset="UTF-8">
     <title>Jasmine Spec Runner v2.0.0</title>
 
-    <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
-    <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="lib/jasmine/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="lib/jasmine/jasmine.css">
 
-    <script src="lib/require.min.js"></script>
+    <script src="lib/require.js"></script>
     <script src="requireConfig.js"></script>
 
-    <script src="lib/jasmine-2.0.0/jasmine.js"></script>
-    <script src="lib/jasmine-2.0.0/jasmine-html.js"></script>
-    <script src="lib/jasmine-2.0.0/boot.js"></script>
+    <script src="lib/jasmine/jasmine.js"></script>
+    <script src="lib/jasmine/jasmine-html.js"></script>
+    <script src="lib/jasmine/boot.js"></script>
 
     <!-- Include each spec here. -->
     <script src="spec/MyModuleSpec.js"></script>
