--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Page</title>
-    <script data-main="src/main" src="lib/require.min.js"></script>
+    <script data-main="src/main" src="lib/require.js"></script>
     <script src="requireConfig.js"></script>
   </head>
   <body>
